2010-08-07  Chong Yidong  <cyd@stupidchicken.com>

	* keyboard.c (command_loop_1):
	* insdel.c (prepare_to_modify_buffer): Don't call validate_region.

2010-08-07  Chong Yidong  <cyd@stupidchicken.com>

	* insdel.c (prepare_to_modify_buffer): Save active region text to
	Vsaved_region_selection.

	* xselect.c (QPRIMARY): Move to keyboard.c.

	* keyboard.c (Vselect_active_regions): Move from simple.el.
	(Vsaved_region_selection, Qx_set_selection, QPRIMARY, Qlazy): New
	vars.
	(command_loop_1): Set window selection prior to deactivating the
	mark.

2010-08-07  Juanma Barranquero  <lekktu@gmail.com>

	* alloc.c (lisp_malloc):
	* buffer.c (set_buffer_internal, set_buffer_internal_1):
	* charset.h (emacs_mule_charset):
	* dispextern.h (inhibit_free_realized_faces, redraw_frame)
	(redraw_garbaged_frames, scroll_cost, update_frame, scrolling)
	(bitch_at_user):
	* lisp.h (Fcheck_coding_system, Fget_text_property)
	(Qfunction, Qcompletion_ignore_case, QCwidth, QCsize):
	Remove duplicate declarations.

2010-08-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* process.c: Simplify include logic.

	* keyboard.h (quit_char): Add declaration.
	* process.h (QCport, QCspeed, QCprocess, QCbytesize, QCstopbits)
	(QCparity, Qodd, Qeven, QCflowcontrol, Qhw, Qsw, QCsummary): Add
	declarations.
	* sysdep.c:
	* w32.c: Remove the above declarations.

	Remove extern declarations in .c files, .h files have them.
	* xterm.c:
	* xdisp.c:
	* msdos.c:
	* image.c:
	* gtkutil.c:
	* fileio.c:
	* eval.c: Remove declarations.

	* frame.c (frame_params): Make const.

	* lisp.h (fatal_error_signal, emacs_root_dir): Add declaration.

	* emacs.c (emacs_copyright, emacs_version): Make static.
	(Vinitial_window_system, Vauto_save_list_file_name)
	(Vinhibit_redisplay): Remove declarations.
	(main): Remove HAVE_SHM code, unused.  Remove _I386 conditional
	for AIX.

	Use const for some arrays and functions.
	* xterm.h (xg_set_icon_from_xpm_data):
	* xfns.c (xg_set_icon_from_xpm_data):
	* term.c (fkeys):